# shellextension

./: kill_explorer.bat  register.reg  start_explorer.bat
crates/get-uuid/: Cargo.toml
crates/get-uuid/src/: main.rs
crates/reload-explorer/: Cargo.toml
crates/reload-explorer/src/: main.rs
crates/shell-extension/: Cargo.toml
crates/shell-extension/src/: class_factory.rs  constants.rs  custom_folder.rs  file.rs  id_enumerator.rs  lib.rs  utils.rs
crates/shell-extension/src/utils/: alloc.rs  bounded_deref.rs  hresult.rs  item_id.rs  itemidlist.rs  location.rs  outrefcast.rs  property.rs
